# Retro-End

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Debug/: retro-end.ilk
data/: retro.db
data/consoles/: blank.psd  logo.psd
data/emulators/: Final Fantasy (R).srm  Fusion.ini  History.txt  rominfo.txt  vba.ini  zsnesw.cfg
data/game screens/logo/: README
data/roms/Sega Master System/: Altered Beast (UE) [!].sms  Double Dragon (UE) [!].sms  Golden Axe (UE) [!].sms
data/roms/Sega Mega Drive/: Final Fantasy (R).gen
data/saves/: Batman Forever (World).gs0  King of Dragons, The (U) [!].zst
src/: globals.h  main.cpp  retro-end.rc
src/LIB/socket.io-clientpp/: socket_io_client.cpp  socket_io_client.hpp
src/LIB/websocketpp/messages/: data.hpp
src/MVC/Controller/: AudioController.cpp  AudioController.h  BaseController.h  GamingController.cpp  GamingController.h  InputController.cpp  InputController.h  LogController.cpp  LogController.h  RenderController.cpp  RenderController.h  RenderControllerSDLGL.cpp  ResourceController.cpp  ResourceController.h  ScraperController.cpp  ScraperController.h  SettingsController.cpp  SettingsController.h  SocialController.cpp  SocialController.h
src/MVC/Model/: BaseModel.cpp  BaseModel.h  Device.cpp  Device.h  DeviceModel.cpp  DeviceModel.h  Font.cpp  Font.h  Game.cpp  Game.h  GameModel.cpp  GameModel.h  ImageIO.cpp  InputConfig.cpp  InputConfig.h  InputConfigModel.cpp  InputConfigModel.h  Observer.h  Sound.cpp  Sound.h  TextureResource.cpp  TextureResource.h  User.cpp  User.h
src/MVC/View/: BaseView.cpp  BaseView.h  Button.cpp  Button.h  ConsoleInfoView.cpp  ConsoleInfoView.h  ConsoleView.cpp  ConsoleView.h  DatePickerDialog.cpp  DatePickerDialog.h  Font.cpp  Font.h  GameInfoView.cpp  GameInfoView.h  GameListView.cpp  GameListView.h  GamesView.cpp  GamesView.h  HelpView.cpp  HelpView.h  Image.cpp  Image.h  InputConfigurationView.cpp  InputConfigurationView.h  Label.cpp  Label.h  ListView.cpp  ListView.h  MainWindow.cpp  MainWindow.h  MessageDialog.cpp  MessageDialog.h  MultiChoiceDialog.cpp  MultiChoiceDialog.h  MultiSelect.cpp  MultiSelect.h  NetplayView.cpp  NetplayView.h  OptionsListView.cpp  OptionsListView.h  (+14 more)
